# f1-sql-mlops

./: .env.example  .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  Makefile  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS.md  README.md  THIRD_PARTY_LICENSES.md  USAGE.md  docker-compose.yml  generate_project.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml
app/: README.md  run_app.sh  streamlit_app.py
data/predictions/: 2019_round_1_race_26.csv  2019_round_2_race_27.csv  2019_round_3_race_28.csv  2019_round_4_race_29.csv  2019_round_5_race_30.csv  2020_round_1_race_31.csv  2020_round_2_race_32.csv  2020_round_3_race_33.csv  2020_round_4_race_34.csv  2020_round_5_race_35.csv  all_predictions.csv  predictions_summary.txt  race_35_predictions.csv
data/toy_parquet/: circuits.parquet  constructors.parquet  drivers.parquet  qualifying.parquet  races.parquet  results.parquet  seasons.parquet  status.parquet
dbt/: .user.yml  dbt_project.yml  mlflow.db  profiles.yml.example
dbt/models/: sources.yml
dbt/models/marts/: dim_circuit.sql  dim_constructor.sql  dim_driver.sql  dim_race.sql  fct_features_pre_race.sql  fct_qualifying.sql  fct_results.sql  schema.yml
dbt/models/staging/: schema.yml  stg_circuits.sql  stg_constructors.sql  stg_drivers.sql  stg_qualifying.sql  stg_races.sql  stg_results.sql  stg_seasons.sql  stg_status.sql
docker/: README.md  validate.sh
models/: dnf_classifier_feature_importance.csv  dnf_classifier_model_card.md  top10_classifier_feature_importance.csv  top10_classifier_features.txt  top10_classifier_model_card.md
reports/: .gitkeep  dnf_test_predictions.csv  top10_test_predictions.csv
src/f1sqlmlops/: __init__.py  config.py  logging_utils.py
src/f1sqlmlops/features/: export_features.py
src/f1sqlmlops/inference/: batch_predict.py  predict.py
src/f1sqlmlops/ingestion/: csv_to_parquet.py  generate_toy_data.py  kaggle_download.py
src/f1sqlmlops/quality/: schema_checks.py
src/f1sqlmlops/training/: evaluate.py  generate_reports.py  train_dnf.py  train_top10.py
src/f1sqlmlops/warehouse/: duckdb_utils.py
tests/: __init__.py  conftest.py  test_config.py  test_features.py  test_ingestion.py  test_schema_checks.py  test_toy_data.py  test_training.py
