[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f1sqlmlops"
version = "0.1.0"
description = "Production-grade F1 race prediction using SQL, DuckDB, dbt, and MLflow"
authors = [{name = "João Pedro Cunha"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Data Scientists",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.9.0",
    "evidently>=0.4.0",
    "streamlit>=1.29.0",
    "python-dotenv>=1.0.0",
    "kaggle>=1.5.0",
    "dbt-core>=1.7.0",
    "dbt-duckdb>=1.7.0",
    "plotly>=5.18.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "ipython>=8.16.0",
    "jupyter>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
